panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_redeclaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_redeclaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_redeclaration.c"
   (declaration external (f~0 `fn() -> int` (static f)) ∅)
   (declaration external (f~0 `fn() -> int` (static f)) ∅)
   (function-definition external stack-size=24
      (f~0 `fn() -> int` (static f))
      (compound-statement
         (return (42 `int` @0))))
   (declaration external (f~0 `fn() -> int` (static f)) ∅)
   (declaration external (f~0 `fn() -> int` (static f)) ∅))

----- stderr -----
