panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_simple.c"
   (tentative-definition external (x~0 `int` (static x)) ∅)
   (definition external (y~1 `int` (static y)) (42 `int`)))

----- stderr -----
