panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_tentative_definitions_with_declaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_tentative_definitions_with_declaration.c"
   (tentative-definition external (value~0 `int` (static value)) ∅)
   (definition external (value~0 `int` (static value)) (42 `int`))
   (tentative-definition external (value~0 `int` (static value)) ∅))

----- stderr -----
